# doin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
src/: completions.rs  main.rs
