[package]
name = "doin"
version = "1.0.0"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Run commands in another directory"
keywords = ["cd", "directory", "change", "chdir", "chdir"]
license = "MIT"
homepage = "https://github.com/aslilac/mkscratch"
repository = "https://github.com/aslilac/mkscratch"
documentation = "https://docs.rs/crate/mkscratch"
edition = "2021"
