[package]
name = "doin"
version = "1.0.3"
authors = ["McKayla Washburn <mckayla@hey.com>"]
description = "Run commands in another directory"
keywords = ["cd", "directory", "change", "chdir", "chdir"]
license = "MIT"
homepage = "https://github.com/aslilac/doin"
repository = "https://github.com/aslilac/doin"
documentation = "https://docs.rs/crate/doin"
edition = "2021"
